src/k8s/inboxiq-celery-billing-beat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inboxiq-celery-billing-beat
  namespace: kaley
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inboxiq-celery-billing-beat
  template:
    metadata:
      labels:
        app: inboxiq-celery-billing-beat
    spec:
      containers:
        - name: billing-beat
          image: 094985084741.dkr.ecr.us-west-2.amazonaws.com/inboxiq:${TAG_VALUE}
          imagePullPolicy: IfNotPresent
          command: ["celery"]
          args: ["-A", "src.celery_inboxiq.celery", "beat", "-l", "info"]
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
