src/k8s/inboxiq-celery-billing-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inboxiq-celery-billing-worker
  namespace: kaley
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inboxiq-celery-billing-worker
  template:
    metadata:
      labels:
        app: inboxiq-celery-billing-worker
    spec:
      containers:
        - name: billing-worker
          image: 094985084741.dkr.ecr.us-west-2.amazonaws.com/inboxiq:${TAG_VALUE}
          imagePullPolicy: IfNotPresent
          command: ["celery"]
          args: ["-A", "src.celery_inboxiq.celery", "worker", "-Q", "billing,inbox", "-l", "info", "-E"]
          livenessProbe:
            exec:
              command: ["python", "-c", "import os; os.kill(1, 0)"]
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 512Mi
            limits:
              cpu: 200m
              memory: 1Gi
