src/k8s/inboxiq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inboxiq
  namespace: kaley
spec:
  selector:
    app: inboxiq
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
