src/k8s/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    # TODO(eu-west-2-migration): replace with new ACM cert ARN after running Step 2 of migration runbook
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:094985084741:certificate/REPLACE_AFTER_ACM_PROVISION
    alb.ingress.kubernetes.io/group.name: inboxiq
spec:
  ingressClassName: alb
  rules:
    - host: grafana.kalevent.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
