src/k8s/inboxiq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inboxiq
  namespace: kaley
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:094985084741:certificate/33585d8b-e448-4a5f-88bb-b5d463febf1a
spec:
  ingressClassName: alb
  rules:
    - host: kalevent.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inboxiq
                port:
                  number: 80
    - host: api.kalevent.com
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: inboxiq
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inboxiq
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: inboxiq
                port:
                  number: 80
    - host: phoenix.kalevent.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phoenix
                port:
                  number: 6006
